--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.8.1
 Django==5.0.6
+django-environ==0.11.2
+django-uuslug==2.0.0
 psycopg2==2.9.9
+python-slugify==8.0.4
 sqlparse==0.5.0
+text-unidecode==1.3
 tzdata==2024.1
